[gd_scene load_steps=10 format=3 uid="uid://dctnxd5nw587r"]

[ext_resource type="Script" path="res://scripts/entity/enemies/ball_small_spike.gd" id="1_ilenj"]
[ext_resource type="PackedScene" uid="uid://bnvly2b2x1q6u" path="res://scenes/entity/enemy_component.tscn" id="2_lpcal"]
[ext_resource type="Texture2D" uid="uid://c2nymrcoqqw5o" path="res://assets/sprites/enemy/en_spike_sphere_normal.png" id="3_85ig5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1u4h4"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ti7f8"]
atlas = ExtResource("3_85ig5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkh1m"]
atlas = ExtResource("3_85ig5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyxfu"]
atlas = ExtResource("3_85ig5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uaqu"]
atlas = ExtResource("3_85ig5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rutt7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti7f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkh1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyxfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uaqu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="BallSmallSpike" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_ilenj")

[node name="EnemyComponent" parent="." instance=ExtResource("2_lpcal")]
SPEED = Vector2(50, 0)
LIFE = 1

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(9, 0)
rotation = 3.14159
target_position = Vector2(-3, 0)
collision_mask = 3

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-9, 0)
rotation = 4.71239
target_position = Vector2(-1.09673e-05, -3)
collision_mask = 3

[node name="Hitbox" type="Area2D" parent="." groups=["damage_area"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_1u4h4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemy"]]
sprite_frames = SubResource("SpriteFrames_rutt7")
autoplay = "default"
frame_progress = 0.244098

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1u4h4")
